--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npx serve@latest out",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format:check": "prettier \"src/**/*.{js,ts,tsx,scss,json}\" --check",
+    "format:write": "prettier \"src/**/*.{js,ts,tsx,scss,json}\" --write",
     "deploy:develop": "npm run build && serverless deploy --stage develop",
-    "deploy:production": "npm run build && serverless deploy --stage production"
+    "deploy:production": "npm run build && serverless deploy --stage production",
+    "prepare": "husky"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -27,6 +31,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "sass": "^1.89.2",
     "serverless": "^3.38.0",
     "serverless-deployment-bucket": "^1.6.0",
