--- a/.github/workflows/actions/setup-node/action.yml
+++ b/.github/workflows/actions/setup-node/action.yml
@@ -27,25 +27,27 @@ runs:
         envkey_AWS_IDENTIFIER: ${{ env.SECRET_INFRA_AWS_IDENTIFIER }}
         envkey_AWS_CLOUDFRONT_WAF_NAME: ${{ env.SECRET_INFRA_AWS_CLOUDFRONT_WAF_NAME }}
 
-    - name: Install yq
-      run: |
-        sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-        sudo chmod +x /usr/local/bin/yq
-      shell: bash
-
-    - name: Read service name from serverless.yml
+    - name: Read service name from serverless.yml (without yq)
       id: read_service
       run: |
-        SERVICE_NAME=$(yq '.service' serverless.yml)
+        SERVICE_NAME=$(grep '^service:' serverless.yml | awk '{print $2}' | tr -d '"')
         echo "service=$SERVICE_NAME" >> $GITHUB_OUTPUT
       shell: bash
 
     - name: Set custom environment variable
-      run: echo "DEPLOY_BUCKET=${{ fromJson(steps.read_service.outputs.service) }}-${{ inputs.environment }}-${{ env.SECRET_INFRA_AWS_IDENTIFIER }}" >> $GITHUB_ENV
+      run: echo "DEPLOY_BUCKET=${{ steps.read_service.outputs.service }}-${{ inputs.environment }}-${{ env.SECRET_INFRA_AWS_IDENTIFIER }}" >> $GITHUB_ENV
       shell: bash
 
     - name: npm ci
       run: npm ci
+      shell: bash
+
+    - name: npm lint
+      run: npm run lint
+      shell: bash
+
+    - name: npm format:check
+      run: npm format:check
       shell: bash
 
 inputs:
