--- a/.github/workflows/ci-check-template.yml
+++ b/.github/workflows/ci-check-template.yml
@@ -19,6 +19,12 @@ jobs:
       - name: npm ci
         run: npm ci
 
+      - name: npm lint
+        run: npm run lint
+
+      - name: npm format:check
+        run: npm format:check
+
       - name: build
         run: npm run build
         env:
