feat: npm run format

--- a/.github/workflows/actions/setup-node/action.yml
+++ b/.github/workflows/actions/setup-node/action.yml
@@ -46,8 +46,8 @@ runs:
       run: npm run lint
       shell: bash
 
-    - name: npm format
-      run: npm format
+    - name: npm run format
+      run: npm run format
       shell: bash
 
 inputs:
