--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "template-nextjs-serverless",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "engines": {
     "node": ">=22.x"
   },
@@ -9,19 +9,24 @@
     "build": "next build",
     "start": "npx serve@latest out",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "format:check": "prettier \"src/**/*.{js,ts,tsx,scss,json}\" --check",
-    "format:write": "prettier \"src/**/*.{js,ts,tsx,scss,json}\" --write",
+    "format": "prettier \"src/**/*.{js,ts,tsx,scss,json}\" --check",
     "deploy:develop": "npm run build && serverless deploy --stage develop",
     "deploy:production": "npm run build && serverless deploy --stage production",
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.540.0",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -41,6 +46,7 @@
     "serverless-deployment-bucket": "^1.6.0",
     "serverless-s3-sync": "^3.4.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
